[package]
name = "jprod"
version = "0.1.0"
authors = ["Jonathan"]

build = "build.rs"

[dependencies]
telemetry = { path = "../telemetry-rs", optional = true }
telemetry_macro = { path = "../telemetry-rs/telemetry_macro" }
compiler_builtins = { git = "https://github.com/rust-lang-nursery/compiler-builtins" }

[build-dependencies]
kernel32-sys = "0.2"
walkdir = "1"
winapi = "0.2"

[features]
use_std = []
develop = []
use_telemetry = ["telemetry"]

[profile.release]
opt-level = "z"
debug-assertions = false
panic = "abort"
debug = true

[profile.dev]
debug-assertions = true
panic = "abort"
debug = true