[workspace]
resolver = "2"
members = ["jprod", "jprod_core", "jprod_packer"]
default-members = ["jprod"]

[profile.release]
opt-level = "z"
debug-assertions = false
panic = "abort"
debug = false
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug-assertions = true
panic = "abort"
debug = true
lto = true

[profile.test]
opt-level = 3
debug = true
lto = true
