[package]
name = "jprod_core"
version = "0.1.0"
authors = ["Jonathan"]

build = "build.rs"

[dependencies]
telemetry = { path = "../../telemetry-rs", optional = true }
telemetry_macro = { path = "../../telemetry-rs/telemetry_macro" }

[features]
use_std = []
develop = []
use_telemetry = ["telemetry"]

[profile.release]
opt-level = 3
debug-assertions = false
panic = "abort"
debug = true

[profile.dev]
opt-level = 0
debug-assertions = true
panic = "abort"
debug = true

[profile.test]
opt-level = 3
debug = true