[package]
name = "jprod_core"
version = "0.1.0"
authors = ["Jonathan"]

build = "build.rs"

[dependencies]

[profile.release]
opt-level = 3
debug-assertions = false
panic = "abort"
debug = false
lto = true

[profile.dev]
opt-level = 0
debug-assertions = true
panic = "abort"
debug = true
lto = true

[profile.test]
opt-level = 3
debug = true
lto = true
