[package]
name = "jprod_editor"
version = "0.1.0"
authors = ["Jonathan"]

[dependencies]
imgui = { git = "https://github.com/Gekkio/imgui-rs" }
jprod_core = { path = "../jprod_core" }
telemetry = { path = "../../telemetry-rs", optional = true }
telemetry_macro = { path = "../../telemetry-rs/telemetry_macro" }

[features]
use_telemetry = ["telemetry"]

[profile.release]
debug-assertions = false
panic = "abort"
debug = true

[profile.dev]
debug-assertions = true
panic = "abort"
debug = true