[package]
name = "jprod_editor"
version = "0.1.0"
authors = ["Jonathan"]

[dependencies]
imgui = { git = "https://github.com/Gekkio/imgui-rs" }
jprod_core = { path = "../jprod_core" }

[features]

[profile.release]
debug-assertions = false
panic = "abort"
debug = true

[profile.dev]
debug-assertions = true
panic = "abort"
debug = true
